--- a/index.html
+++ b/index.html
@@ -9,75 +9,29 @@
 </head>
 <body>
 	<div class="wrapper container">
-		<table class="table table-hover table-responsive-md table-dark text-center">
+		<table class="table table-hover table-responsive-md table-dark text-center mt-3 rounded">
 			<thead>
 				<tr>
 					<th scope="col">#</th>
-					<th scope="col">ИИН</th>
-					<th scope="col">1+1</th>
-					<th scope="col">5+D</th>
-					<th scope="col">D+2</th>
-					<th scope="col">D+4</th>
-					<th scope="col">1+1 [sticks]</th>
-					<th scope="col">3+3 [sticks]</th>
+					<th scope="col">Дата</th>
+					<th scope="col">Продано девайсов</th>
+					<th scope="col">Продано сигарет</th>
+					<th scope="col">Итог</th>
 				</tr>
 			</thead>
 			<tbody>
-				<!-- Динамические элементы -->
-<!-- 				<tr>
-					<td>1</td>
-					<td>030904500667</td>
-					<td><span class="badge badge-success">Доступно</span></td>
-					<td><span class="badge badge-success">Доступно</span></td>
-					<td><span class="badge badge-success">Доступно</span></td>
-					<td><span class="badge badge-success">Доступно</span></td>
-					<td><span class="badge badge-success">Доступно</span></td>
-					<td><span class="badge badge-danger">Недоступно</span></td>
-				</tr> -->
+				<div class="empty"></div>
 				<!-- Всегда -->
 				<tr>
 					<td></td>
-					<td><input type="text" id="number" class="form-control form-control-sm"></td>
-					<td>
-						<div class="custom-control custom-switch">
-							<input type="checkbox" class="custom-control-input" id="1p1" checked>
-							<label class="custom-control-label" for="1p1"></label>
-						</div>
-					</td>
-					<td>
-						<div class="custom-control custom-switch">
-							<input type="checkbox" class="custom-control-input" id="5pd" checked>
-							<label class="custom-control-label" for="5pd"></label>
-						</div>
-					</td>
-					<td>
-						<div class="custom-control custom-switch">
-							<input type="checkbox" class="custom-control-input" id="dp2" checked>
-							<label class="custom-control-label" for="dp2"></label>
-						</div>
-					</td>
-					<td>
-						<div class="custom-control custom-switch">
-							<input type="checkbox" class="custom-control-input" id="dp4" checked>
-							<label class="custom-control-label" for="dp4"></label>
-						</div>
-					</td>
-					<td>
-						<div class="custom-control custom-switch">
-							<input type="checkbox" class="custom-control-input" id="1p1s" checked>
-							<label class="custom-control-label" for="1p1s"></label>
-						</div>
-					</td>
-					<td>
-						<div class="custom-control custom-switch">
-							<input type="checkbox" class="custom-control-input" id="3p3s" checked>
-							<label class="custom-control-label" for="3p3s"></label>
-						</div>
-					</td>
+					<td><input type="date" id="date" class="form-control form-control-sm"></td>
+					<td><input type="text" id="device-count" class="form-control form-control-sm" value="0"></td>
+					<td><input type="text" id="smoke-count" class="form-control form-control-sm" value="0"></td>
+					<td><button class="btn btn-outline-primary btn-sm" id="addRow">Добавить</button></td>
 				</tr>
 			</tbody>
 		</table>
-		<button class="btn btn-outline-success">Добавить</button>
+		<button class="btn btn-outline-warning btn-sm" id="clearData">Очистить</button>
 	</div>
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
