--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 	<div class="wrapper container">
 		<table class="table table-hover table-responsive-md table-dark text-center mt-3 rounded">
+   <caption class="ml-2">Общая сумма: 0</caption>
 			<thead>
 				<tr>
 					<th scope="col">#</th>
