--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
 	<div class="wrapper container">
-		<table class="table table-hover table-responsive-md table-dark text-center mt-3 rounded">
-   <caption class="ml-2">Общая сумма: 0</caption>
+		<table class="table table-responsive-md table-dark text-center mt-3">
+		<caption class="ml-2 caption-1">Общая сумма: 0 тг</caption>
+		<caption class="ml-2 caption-2">Девайсов за месяц: 0 шт</caption>
+		<caption class="ml-2 caption-3">Сигарет за месяц: 0 шт</caption>
 			<thead>
 				<tr>
 					<th scope="col">#</th>
