--- a/index.html
+++ b/index.html
@@ -4,34 +4,55 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="app/css/main.css">
-	<title>IDs Data</title>
+	<title>SalNotes</title>
 </head>
 <body>
 	<div class="wrapper container">
-		<table class="table table-hover table-responsive-md table-dark text-center mt-3 rounded">
-			<thead>
-				<tr>
-					<th scope="col">#</th>
-					<th scope="col">Дата</th>
-					<th scope="col">Продано девайсов</th>
-					<th scope="col">Продано сигарет</th>
-					<th scope="col">Итог</th>
-				</tr>
-			</thead>
-			<tbody>
-				<div class="empty"></div>
-				<!-- Всегда -->
-				<tr>
-					<td></td>
-					<td><input type="date" id="date" class="form-control form-control-sm"></td>
-					<td><input type="text" id="device-count" class="form-control form-control-sm" value="0"></td>
-					<td><input type="text" id="smoke-count" class="form-control form-control-sm" value="0"></td>
-					<td><button class="btn btn-outline-primary btn-sm" id="addRow">Добавить</button></td>
-				</tr>
-			</tbody>
-		</table>
-		<button class="btn btn-outline-warning btn-sm" id="clearData">Очистить</button>
+
+		<div class="table-wrapper sticky-top">
+			<table class="table table-responsive-md table-dark text-center mt-3" id="create-data-table">
+				<tbody>
+					<tr>
+						<td>
+							<input type="date" id="date" class="form-control form-control-sm">
+						</td>
+						<td>
+							<input type="text" id="device-count" class="form-control form-control-sm" value="0">
+						</td>
+						<td>
+							<input type="text" id="smoke-count" class="form-control form-control-sm" value="0">
+						</td>
+						<td>
+							<button class="btn btn-outline-primary btn-sm" id="addRow">Добавить</button>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<div id="is-super-salary" class="">
+				<i class="fa fa-star"></i>
+			</div>
+		</div>
+
+		<div class="table-wrapper">
+			<table class="table table-responsive-md table-dark text-center mt-3" id="data-table">
+				<caption class="ml-2 caption-1">Общая сумма: 0 тг</caption>
+				<caption class="ml-2 caption-2">Девайсов за месяц: 0 шт</caption>
+				<caption class="ml-2 caption-3">Сигарет за месяц: 0 шт</caption>
+				<thead>
+					<tr>
+						<th scope="col">Дата</th>
+						<th scope="col">Продано девайсов</th>
+						<th scope="col">Продано сигарет</th>
+						<th scope="col">Итог</th>
+					</tr>
+				</thead>
+				<tbody>
+				</tbody>
+			</table>
+		</div>
+		<button class="btn btn-outline-warning btn-sm mb-3" id="clearData">Очистить</button>
 	</div>
 
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
