--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
 							<input type="text" id="smoke-count" class="form-control form-control-sm" value="0">
 						</td>
 						<td>
-							<button class="btn btn-outline-primary btn-sm" id="addRow">Добавить</button>
+							<button class="btn btn-outline-primary btn-sm" id="addRow">
+								<i class="fa fa-plus" aria-hidden="true"></i>
+							</button>
 						</td>
 					</tr>
 				</tbody>
 			</table>
-			<div id="is-super-salary" class="">
-				<i class="fa fa-star"></i>
-			</div>
 		</div>
 
 		<div class="table-wrapper">
