--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 				<caption class="ml-2 caption-1">Общая сумма: 0 тг</caption>
 				<caption class="ml-2 caption-2">Девайсов за месяц: 0 шт</caption>
 				<caption class="ml-2 caption-3">Сигарет за месяц: 0 шт</caption>
+    <caption class="ml-2 caption-4">Заработная плата:<br>0 тг</caption>
 				<thead>
 					<tr>
 						<th scope="col">Дата</th>
